# AI-Coding-Workspace

./: .env.example  .gitignore  AGENT_ARCHITECTURE_AUDIT.md  INTERVIEW_STORY_GUIDE.md  Jenkinsfile  PROJECT_DOC.md  PROJECT_GUIDE.md  PROJECT_OFFER_CRASH_COURSE.md  README.md  docker-compose.yml  index.html  start.bat  stop.bat
aI-coding-workspace-backend/: .dockerignore  README.md  pyproject.toml
aI-coding-workspace-backend/app/: main.py
aI-coding-workspace-backend/app/api/v1/: router.py
aI-coding-workspace-backend/app/api/v1/endpoints/: agents.py  browser_proxy.py  chat.py  completion.py  git.py  health.py  models.py  projects.py  terminal.py  vibe.py  yuque.py
aI-coding-workspace-backend/app/core/: config.py  database.py  db_init.py  dependencies.py
aI-coding-workspace-backend/app/engine/: harness.py  state.py  workflow.py
aI-coding-workspace-backend/app/engine/agents/: coder.py  llm.py  multi_model.py  planner.py  qa.py  reviewer.py  router.py  tester.py
aI-coding-workspace-backend/app/engine/context/: __init__.py  manager.py
aI-coding-workspace-backend/app/engine/parser/: code_slicer.py
aI-coding-workspace-backend/app/engine/vector/: embeddings.py  indexer.py  retriever.py
aI-coding-workspace-backend/app/models/: __init__.py  agent_config.py  base.py  model_config.py  project.py
aI-coding-workspace-backend/app/schemas/: agent_config.py  chat.py  model_config.py  vibe.py
aI-coding-workspace-backend/scripts/: check_db.py  index_project.py  init_db.py  init_schema.sql  quick_index.py
aI-coding-workspace-frontend/: Dockerfile  index.html  (+4 more)
(+59 files in other folders)
