[project]
name = "ai-coding-workspace-backend"
version = "0.1.0"
description = "Web AI IDE backend with FastAPI, pgvector and LangGraph."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.137.2",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "langchain>=1.3.10",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.3.2",
    "langgraph==1.2.6",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.6",
    "httpx>=0.27.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=0.7.0",
    "pygments>=2.18.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["runtime*", "scripts*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
